# healthdoc

./: .env.example  .gitignore  DEPLOYMENT_CHECKLIST.md  README.md  fix_database_schema.sql  fix_database_schema_v2.sql  fix_database_schema_v3.sql  fix_permissions_final.sql  index.html  package-lock.json  package.json  pnpm-lock.yaml  supabase_manual_setup.sql  supabase_maps.sql  supabase_rls_fix.sql  supabase_rls_fix_lowercase.sql  supabase_rls_fix_v2.sql  supabase_rls_reports.sql  tsconfig.json  turbo.json  update_schema_v2.sql  update_schema_v3.sql  update_schema_v4.sql
apps/ai-service/: Dockerfile  README.md  pyproject.toml
apps/ai-service/app/: main.py
apps/ai-service/app/api/routes/: analyze.py  embeddings.py  health.py  query.py  recommendations.py
apps/ai-service/app/core/: config.py
apps/ai-service/app/core/nlp/: metric_extractor.py
apps/ai-service/app/core/ocr/: processor.py
apps/api/: Dockerfile  package.json
apps/api/prisma/: schema.prisma
apps/api/scripts/: fix_schema.ts
apps/api/src/: index.ts
apps/api/src/lib/: auditService.ts  email.ts  logger.ts  queue.ts  square.ts  supabase.ts
apps/api/src/scripts/: debug_db.ts  fix_trigger.ts  setup.ts
apps/api/src/services/: notificationService.ts
apps/api/src/workers/: reportWorker.ts
apps/web/: next.config.ts  package.json  pnpm-lock.yaml  vercel.json
apps/web/src/app/: globals.css  layout.tsx  not-found.tsx  page.tsx  template.tsx
apps/web/src/lib/: api.ts  (+2 more)
docker/: docker-compose.deps.yml  docker-compose.yml
docker/services/: ai-service.Dockerfile  api.Dockerfile  web.Dockerfile
(+100 files in other folders)
